[gd_scene load_steps=5 format=2]

[ext_resource path="res://HadamardPowUp.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/art/HadamardPU.png" type="Texture" id=2]
[ext_resource path="res://QPF_assets/music/hadamardActivate.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 236.165

[node name="HadamardPowUp" type="RigidBody2D"]
position = Vector2( 7.53668, 12.0587 )
rotation = 1.5714
z_index = 101
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -10.0066, 2.0067 )
rotation = 1.56742
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.14649, 0.35457 )
scale = Vector2( 6.02776, 6.06442 )

[node name="TouchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="AreaTocable" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -73.0
margin_top = -74.0
margin_right = 71.0
margin_bottom = 79.0

[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_exit_screen"]
[connection signal="pressed" from="AreaTocable" to="." method="_on_AreaTocable_pressed"]
